--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=bhavanisankar6304@gmail.com
-spring.mail.password=jydsbhotxgehyqhj
+spring.mail.password=<your-generate-password>
 
 # Additional properties for authentication and STARTTLS
 spring.mail.properties.mail.smtp.auth=true
